<resources>
    <string name="app_name">Batmanhood</string>
    <string name="app_name_cap">BATMANHOOD</string>

    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="intro_text_description">Collaborate and Plan Together Across Multiple Devices on Projemanag’s Minimalist Interface.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register">REGISTER</string>

    <string name="sign_up_description_text">Enter your name, email id and password, to register with us.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

    <string name="sign_in_description_text">Enter email and password to sign in.</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Stock Name</string>

    <string name="one_day_radio_button_text">1D</string>
    <string name="five_day_radio_button_text">5D</string>
    <string name="one_month_radio_button_text">1M</string>
    <string name="six_month_radio_button_text">6M</string>
    <string name="one_year_radio_button_text">1Y</string>
    <string name="five_year_radio_button_text">5Y</string>
</resources>